[project]
name = "turboq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "symonk", email = "jackofspaces@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
